--- a/index.html
+++ b/index.html
@@ -3,27 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Career Guidance</title>
+    <title>Basic Calculator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Career Guidance</h1>
-        <p>Welcome to the career guidance page. Select your interest area to get started:</p>
-        
-        <select id="interestSelect">
-            <option value="">-- Select an area of interest --</option>
-            <option value="webDevelopment">Web Development</option>
-            <option value="dataScience">Data Science</option>
-            <option value="digitalMarketing">Digital Marketing</option>
-        </select>
+    <div class="calculator">
+        <input type="text" class="calculator-screen" id="calculator-screen" disabled />
+        <div class="calculator-keys">
+            <button type="button" class="operator" value="+">+</button>
+            <button type="button" class="operator" value="-">-</button>
+            <button type="button" class="operator" value="*">&times;</button>
+            <button type="button" class="operator" value="/">&divide;</button>
 
-        <div id="guidance" class="hidden">
-            <h2>Guidance</h2>
-            <p id="guidanceText"></p>
+            <button type="button" value="7">7</button>
+            <button type="button" value="8">8</button>
+            <button type="button" value="9">9</button>
+
+            <button type="button" value="4">4</button>
+            <button type="button" value="5">5</button>
+            <button type="button" value="6">6</button>
+
+            <button type="button" value="1">1</button>
+            <button type="button" value="2">2</button>
+            <button type="button" value="3">3</button>
+
+            <button type="button" value="0">0</button>
+            <button type="button" value=".">.</button>
+            <button type="button" class="all-clear" value="all-clear">AC</button>
+
+            <button type="button" class="equal-sign operator" value="=">=</button>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
